Create application schema and an api to add application
